Just another random commit

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera</title>
 </head>
 <body>
-<h1>Hello Coursera, absoliutely loving it so far!</h1>
+<h1>Hello Coursera, absolutely loving it so far! Wow! The quick updation is awesome!!!</h1>
 </body>
 </html>
